--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -1253,8 +1253,7 @@ the \texttt{plot()} function, type \texttt{?plot}.
 
 \CommentTok{# Sampling from a Normal - 100 random points from a N(0, 1)}
 \KeywordTok{rnorm}\NormalTok{(}\DataTypeTok{n =} \DecValTok{10}\NormalTok{, }\DataTypeTok{mean =} \DecValTok{0}\NormalTok{, }\DataTypeTok{sd =} \DecValTok{1}\NormalTok{)}
-\CommentTok{#ans>  [1]  2.0291  0.5653  1.4579 -0.3624 -0.3078 -0.4662 -1.5784  0.0245}
-\CommentTok{#ans>  [9] -0.0864 -1.4929}
+\CommentTok{#ans>  [1] -2.453  0.501  2.742  2.063 -1.036 -0.380 -0.196 -0.437  0.782  0.203}
 
 \CommentTok{# If you want to have always the same result, set the seed of the random number}
 \CommentTok{# generator}
@@ -2387,7 +2386,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-03-12 13:59:39"
+date: "2017-03-12 14:18:31"
 output:
   html_document:
     toc: true
@@ -5938,38 +5937,38 @@ Let's illustrate how to perform hierarchical clustering on dataset
 \CommentTok{# the dendogram for "long" groups of hanging leaves}
 \CommentTok{# These are the cluster assignments}
 \KeywordTok{cutree}\NormalTok{(treeComp, }\DataTypeTok{k =} \DecValTok{2}\NormalTok{) }\CommentTok{# (Barcelona, Real Madrid) and (rest)}
-\CommentTok{#ans>       Barcelona     Real Madrid Atlético Madrid      Villarreal }
+\CommentTok{#ans>       Barcelona     Real Madrid Atletico Madrid      Villarreal }
 \CommentTok{#ans>               1               1               1               2 }
-\CommentTok{#ans>        Athletic           Celta         Sevilla          Málaga }
+\CommentTok{#ans>        Athletic           Celta         Sevilla          Malaga }
 \CommentTok{#ans>               2               2               2               2 }
 \CommentTok{#ans>   Real Sociedad           Betis      Las Palmas        Valencia }
 \CommentTok{#ans>               2               2               2               2 }
 \CommentTok{#ans>           Eibar        Espanyol       Deportivo         Granada }
 \CommentTok{#ans>               2               2               2               2 }
-\CommentTok{#ans>  Sporting Gijón  Rayo Vallecano          Getafe         Levante }
+\CommentTok{#ans>  Sporting Gijon  Rayo Vallecano          Getafe         Levante }
 \CommentTok{#ans>               2               2               2               2}
 \KeywordTok{cutree}\NormalTok{(treeComp, }\DataTypeTok{k =} \DecValTok{3}\NormalTok{) }\CommentTok{# (Barcelona, Real Madrid), (Atlético Madrid) and (rest)}
-\CommentTok{#ans>       Barcelona     Real Madrid Atlético Madrid      Villarreal }
+\CommentTok{#ans>       Barcelona     Real Madrid Atletico Madrid      Villarreal }
 \CommentTok{#ans>               1               1               2               3 }
-\CommentTok{#ans>        Athletic           Celta         Sevilla          Málaga }
+\CommentTok{#ans>        Athletic           Celta         Sevilla          Malaga }
 \CommentTok{#ans>               3               3               3               3 }
 \CommentTok{#ans>   Real Sociedad           Betis      Las Palmas        Valencia }
 \CommentTok{#ans>               3               3               3               3 }
 \CommentTok{#ans>           Eibar        Espanyol       Deportivo         Granada }
 \CommentTok{#ans>               3               3               3               3 }
-\CommentTok{#ans>  Sporting Gijón  Rayo Vallecano          Getafe         Levante }
+\CommentTok{#ans>  Sporting Gijon  Rayo Vallecano          Getafe         Levante }
 \CommentTok{#ans>               3               3               3               3}
 \CommentTok{# Compare differences - treeComp makes more sense than treeAve}
 \KeywordTok{cutree}\NormalTok{(treeComp, }\DataTypeTok{k =} \DecValTok{4}\NormalTok{) }
-\CommentTok{#ans>       Barcelona     Real Madrid Atlético Madrid      Villarreal }
+\CommentTok{#ans>       Barcelona     Real Madrid Atletico Madrid      Villarreal }
 \CommentTok{#ans>               1               1               2               3 }
-\CommentTok{#ans>        Athletic           Celta         Sevilla          Málaga }
+\CommentTok{#ans>        Athletic           Celta         Sevilla          Malaga }
 \CommentTok{#ans>               3               3               3               3 }
 \CommentTok{#ans>   Real Sociedad           Betis      Las Palmas        Valencia }
 \CommentTok{#ans>               3               3               3               4 }
 \CommentTok{#ans>           Eibar        Espanyol       Deportivo         Granada }
 \CommentTok{#ans>               4               4               3               4 }
-\CommentTok{#ans>  Sporting Gijón  Rayo Vallecano          Getafe         Levante }
+\CommentTok{#ans>  Sporting Gijon  Rayo Vallecano          Getafe         Levante }
 \CommentTok{#ans>               4               4               4               4}
 \end{Highlighting}
 \end{Shaded}
