--- a/seminaireR/seminaire_R_TEM.Rmd
+++ b/seminaireR/seminaire_R_TEM.Rmd
@@ -261,3 +261,5 @@ Note that for each individual predictor a $t$-statistic and a p-value were repor
 1. Tutorial on European Union dataset.
 
 2. Application on the "Boston" data set.
+
+Lien: http://mghassany.com/seminaireR/R_Workshop.html
