--- a/bibliography/mybiblio.bib
+++ b/bibliography/mybiblio.bib
@@ -28,7 +28,8 @@ References
   title = "{Collaborative Clustering Using Prototype-Based Techniques}",
   url = "http://www.worldscientific.com/doi/abs/10.1142/S1469026812500174",
   volume = "11",
-  year = "2012"
+  year = "2012",
+  abstract = {The aim of collaborative clustering is to reveal the common structure of data distributed on different sites. In this paper, we present a formalism of topological collaborative clustering using prototype-based clustering techniques; in particular we formulate our approach using Kohonen's Self-Organizing Maps. Maps representing different sites could collaborate without recourse to the original data, preserving their privacy. We present two different approaches of collaborative clustering: horizontal and vertical. The strength of collaboration (confidence exchange) between each pair of datasets is determined by a parameter, we call coefficient of collaboration, to be estimated iteratively during the collaboration phase using a gradient-based optimization, for both the approaches. The proposed approaches have been validated on several datasets and experimental results have shown very promising performance.}
 }
 
 
@@ -55,7 +56,8 @@ References
   volume = {14},
   year = {2015},
   URL = {http://www.worldscientific.com/doi/abs/10.1142/S1469026815500017},
-  eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S1469026815500017}
+  eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S1469026815500017},
+  abstract = {In this paper, we propose a Collaborative Clustering method based on Variational Bayesian Generative Topographic Mapping (VBGTM). To do so, we first propose a method that combines VBGTM and Fuzzy c-means (FCM). Collaborative clustering is useful to achieve interaction between different sources of information for the purpose of revealing underlying structures and regularities within data sets. It can be treated as a process of consensus building where we attempt to reveal a structure that is common across all sets of data. VBGTM was introduced as a variational approximation of Generative Topographic Mapping (GTM) to control data overfitting. It provides an analytical approximation to the posterior probability of the latent variables and the distribution of the input data in the latent space. It can be effectively applied to visualize and explore properties of the data. But when the number of latent points is large, similar units need to be grouped (i.e., clustered) to facilitate quantitative analysis of the map and the data. We use FCM to determine the prototypes as well as the resultant clusters and the corresponding membership functions of the input data, based on the latent variables obtained from VBGTM. So, by combining the two algorithms, we develop a method that can do visualization and clustering at the same time. We observe that the hybrid method (F-VBGTM) performs very well in terms of many cluster-validity indexes.}
 }
 
 @conference{grozavu2011apprentissage,
@@ -77,13 +79,6 @@ CGH data},
   year = {2010},
 }
 
-@article{Benamar16-journal,
-  author = {Lamya Benamar and Christine Balagu{\'e} and Mohamad Ghassany},
-  title = {The Identification and Influence of Social Roles in a Social Media Product Community : a Systemic Approach},
-  journal = {(submitted)},
-  year = "2016"
-}
-
 @conference{Benamar16-emac,
   slides      = {/bibliography/files/marketingscience-16.pdf},
   title={Analyzing interactions and identifying social roles in a brand community on social networks},
@@ -92,5 +87,17 @@ CGH data},
   year={2016},
 }
 
-
+@article{benamar2017the,
+  file  = {/bibliography/files/Benamar_et_al-2017-JCMC.pdf},
+  author = {Benamar, Lamya and Balagué, Christine and Ghassany, Mohamad},
+  year = {2017},
+  title = {The Identification and Influence of Social Roles in a Social Media Product Community},
+  journal = {Journal of Computer‐Mediated Communication},
+  publisher = {Wiley Online Library},
+  issn = {1083-6101},
+  doi = {10.1111/jcc4.12195},
+  month = {10},
+  url = {http:https://doi.org/10.1111/jcc4.12195},
+  abstract = {This research focuses on the identification of social roles and an investigation of their influence in online context. Relying on a systemic approach for role conceptualization, we investigate member's activity, shared content and position in the network within a consumer to consumer social media-based community (SMC) around a product. This investigation led to the identification of ten core roles, based on three key elements: object of interest (product, practice, and community), main contribution type (sharing information and seeking information), individual orientation (factual, emotional). We propose an explanation about how these roles, through their positioning, participate in the community dynamics and how they contribute to the creation and diffusion of cookery as a social practice, shaping the periphery around this practice.}
+}
 
